@@ -15,6 +15,9 @@ public class LGColors {
     public static final Color SAVED_LINE_HIGHLIGHT = Color.GREEN.darker();
     public static final Color Y_EQUALS_X = Color.BLUE;
     public static final Color Y_EQUALS_NEGATIVE_X = Color.CYAN;
-    public static final Color SLOPE_COLOR = Color.ORANGE;
+    public static final Color SLOPE_COLOR = Color.GREEN;
     public static final Color INTERCEPT_COLOR = Color.YELLOW;
+    public static final Color SAVE_LINE_BUTTON = Color.WHITE;
+    public static final Color ERASE_LINES_BUTTON = Color.WHITE;
+    public static final Color RESET_ALL_BUTTON = Color.WHITE;
 }
